# uvmcollab.github.io

./: .gitignore  404.html  CNAME  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements-lock.txt  zensical.toml
.github/workflows/: ci.yml
assets/images/site_logo/: docs.txt
contacts/: index.html
docs/: index.md
docs/about/: about.md  contacts.md
docs/contacts/: index.md
docs/ip-blocks/: index.md  ip-blocks.md
docs/jobs/: jobs.md
docs/skills/: index.md  skills.md
docs/skills/bash/: bash-basics.md
docs/skills/git/: git-basics.md  git-flow.md  git-ssh.md  git-submodules.md  github-project-flow.md
docs/skills/linux/: linux-basics.md  regex.md
docs/skills/makefile/: makefile-basics.md
docs/skills/python/: python-basics.md  uv.md
docs/skills/tcl/: hello.tcl  tcl-basics.md  tcl-tutorial.md
docs/stylesheets/: extra.css
docs/sv/: arrays.md  cli.md  clock-guide.md  clocking-blocks.md  command-line-config.md  compiler-directives.md  constants.md  data-types.md  get-started.md  index.md  resource-guide.md  systemverilog.md
docs/sv/basics/: data-types.md  interfaces.md  threads.md
docs/sv/guidelines/: resource-guide.md
docs/tool-guides/: tool-guides.md
docs/tools-guides/: index.md
docs/uvm/: get-started.md  index.md  uvm.md
ip-blocks/: index.html
scripts/: setup_python_env.sh
search/: search_index.json
skills/: index.html
sv/: index.html
sv/clocking-blocks/: index.html
sv/data-types/: index.html
sv/interfaces/: index.html
sv/threads/: index.html
tools-guides/: index.html
uvm/: index.html
(+71 files in other folders)
